--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.0.0",
     "gsap": "^3.10.4",
     "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-autosuggest": "^10.1.0",
