--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^17.0.14",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "buffer": "^6.0.3",
     "dotenv": "^16.0.0",
     "gsap": "^3.10.4",
     "js-cookie": "^3.0.1",
